tests/src/errors/syntax_errors/calc.rustemo
E: E '+' E {left}
 | Number;

terminals
Plus: '+';
Number: /\d+/;
